📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -14382,5 +14382,117 @@
         "published": "Mon, 08 Dec 2025 06:20:42 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46189011\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/15/gift-guide-techcrunchs-favorite-things/",
+        "title": "Gift guide: TechCrunch\u2019s favorite things",
+        "link": "https://techcrunch.com/2025/12/15/gift-guide-techcrunchs-favorite-things/",
+        "published": "Mon, 15 Dec 2025 18:41:35 +0000",
+        "source": "TechCrunch",
+        "summary": "As tech journalists we have a lot of opinions. So if we really like something, it's probably good!"
+    },
+    {
+        "id": "https://www.theverge.com/22982833/best-fitbit-watch-fitness-tracker",
+        "title": "The best Fitbits for your fitness and health",
+        "link": "https://www.theverge.com/22982833/best-fitbit-watch-fitness-tracker",
+        "published": "2025-12-15T13:59:38-05:00",
+        "source": "The Verge",
+        "summary": "In 2025, you might wonder if Fitbit is still relevant. Despite being acquired by Google, Fitbit remains one of the most recognizable names in the industry. Fitbit trackers aren\u2019t meant for the most hardcore of athletes, but they\u2019re still excellent devices for tracking overall activity as well as monitoring certain health and wellness metrics, like [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/844780/bungie-marathon-march-launch-delay",
+        "title": "Bungie&#8217;s delayed shooter Marathon launches in March",
+        "link": "https://www.theverge.com/news/844780/bungie-marathon-march-launch-delay",
+        "published": "2025-12-15T13:42:03-05:00",
+        "source": "The Verge",
+        "summary": "Bungie's Marathon, its upcoming extraction shooter that it delayed from a planned September release, will now launch in March 2026. The studio is \"targeting\" a price of $39.99, and \"purchasing Marathon will give you full access to the game, including a roadmap of free gameplay updates as the year progresses,\" according to a blog post. [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/844755/luminar-lidar-chapter-11-bankruptcy",
+        "title": "Lidar-maker Luminar files for bankruptcy",
+        "link": "https://www.theverge.com/news/844755/luminar-lidar-chapter-11-bankruptcy",
+        "published": "2025-12-15T13:32:41-05:00",
+        "source": "The Verge",
+        "summary": "Luminar, the lidar manufacturer that rode a wave of self-driving car hype to land deals with major automakers like Volvo and Mercedes-Benz, filed for bankruptcy Monday. The company has been mired in a legal fight with its founder and former CEO, Austin Russell, who was ousted earlier this year following an ethics inquiry. As part [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/cozy-earth-pajamas-flash-deal-december-2025/",
+        "title": "Cozy Earth Is Offering 40 Percent off Pajamas Right Now",
+        "link": "https://www.wired.com/story/cozy-earth-pajamas-flash-deal-december-2025/",
+        "published": "Mon, 15 Dec 2025 18:27:02 +0000",
+        "source": "WIRED",
+        "summary": "Rarely are deals better than what you see on Black Friday, but Cozy Earth's upping the ante for this pajama sale."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/amazon-sells-moba-march-of-giants-to-ubisoft-183948291.html?src=rss",
+        "title": "Amazon sells MOBA March of Giants to Ubisoft",
+        "link": "https://www.engadget.com/gaming/amazon-sells-moba-march-of-giants-to-ubisoft-183948291.html?src=rss",
+        "published": "Mon, 15 Dec 2025 18:39:48 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><a class=\"link\" href=\"https://www.engadget.com/gaming/beyond-good--evil-2-is-somehow-still-under-development-185230052.html\" target=\"_blank\">Ubisoft</a> is moving deeper into MOBAs after buying <em>March of Giants</em>  from <a class=\"link\" href=\"https://www.engadget.com/amazon-is-winding-down-its-still-popular-new-world-mmo-amid-mass-layoffs-150500426.html\" target=\"_blank\">Amazon</a> and acquiring the team that made the game. As part of the <a class=\"link rapid-with-clickid\" href=\"https://sh"
+    },
+    {
+        "id": "https://www.engadget.com/ai/slop-is-merriam-websters-word-of-the-year-181903322.html?src=rss",
+        "title": "'Slop' is Merriam-Webster's word of the year",
+        "link": "https://www.engadget.com/ai/slop-is-merriam-websters-word-of-the-year-181903322.html?src=rss",
+        "published": "Mon, 15 Dec 2025 18:19:03 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Merriam-Webster <a href=\"https://www.merriam-webster.com/wordplay/word-of-the-year\"><ins>has selected</ins></a> &quot;slop&quot; for the dictionary company's 2025 word of the year. The leading lexicographers define slop as &quot;digital content of low quality that is produced usually in quantity by means of artificial intelligence.&quot; We've seen an absolute deluge of AI slop this year, from <a href=\"https://www.engadget.com/ai/movie-studios-have-been-making-serious-money-from-ai-slop-on-yo"
+    },
+    {
+        "id": "https://gizmodo.com/the-12-best-sci-fi-fantasy-and-horror-tv-shows-of-2025-2000698626",
+        "title": "The 12 Best Sci-Fi, Fantasy, and Horror TV Shows of 2025",
+        "link": "https://gizmodo.com/the-12-best-sci-fi-fantasy-and-horror-tv-shows-of-2025-2000698626",
+        "published": "Mon, 15 Dec 2025 18:45:15 +0000",
+        "source": "Gizmodo",
+        "summary": "In a year full of standout shows, io9 picks the very best genre stories to hit the small screen."
+    },
+    {
+        "id": "https://mashable.com/article/conduent-data-breach-10-5-million-social-security-numbers",
+        "title": "Conduent data breach exposed data of 10.5 million people, including Social Security numbers",
+        "link": "https://mashable.com/article/conduent-data-breach-10-5-million-social-security-numbers",
+        "published": "Mon, 15 Dec 2025 18:26:10 +0000",
+        "source": "Mashable",
+        "summary": "Conduent, a large business and healthcare services company, has confirmed its systems were breached, exposing the data of 10.5 million people."
+    },
+    {
+        "id": "https://www.zdnet.com/article/tech-gift-guide-2025/",
+        "title": "We hand-picked the 15 best tech products to gift this year",
+        "link": "https://www.zdnet.com/article/tech-gift-guide-2025/",
+        "published": "Mon, 15 Dec 2025 19:00:00 GMT",
+        "source": "Latest news",
+        "summary": "ZDNET rounded up our favorite tech products that would make great holiday gifts -- and some of these splurges are on sale."
+    },
+    {
+        "id": "https://www.zdnet.com/article/the-latest-pop-os-24-04-update-has-this-long-time-linux-user-more-excited-than-ever/",
+        "title": "The latest Pop!_OS 24.04 update has this long-time Linux user more excited than ever",
+        "link": "https://www.zdnet.com/article/the-latest-pop-os-24-04-update-has-this-long-time-linux-user-more-excited-than-ever/",
+        "published": "Mon, 15 Dec 2025 18:48:00 GMT",
+        "source": "Latest news",
+        "summary": "As a Pop!_OS veteran, I've not been this excited about a release since I first started using System76's in-house distribution."
+    },
+    {
+        "id": "https://www.zdnet.com/article/traditional-wifi-router-vs-mesh/",
+        "title": "Should you upgrade your Wi-Fi router to mesh? I tested it for a month, and here's my verdict",
+        "link": "https://www.zdnet.com/article/traditional-wifi-router-vs-mesh/",
+        "published": "Mon, 15 Dec 2025 18:27:00 GMT",
+        "source": "Latest news",
+        "summary": "Do you need one access point or full-home coverage? Here's how to tell."
+    },
+    {
+        "id": "https://www.zdnet.com/article/att-data-breach-settlement-how-to-claim/",
+        "title": "You have days left to claim your AT&T data breach settlement of up to $7,500 - here's how",
+        "link": "https://www.zdnet.com/article/att-data-breach-settlement-how-to-claim/",
+        "published": "Mon, 15 Dec 2025 18:21:00 GMT",
+        "source": "Latest news",
+        "summary": "The deadline to claim part of AT&amp;T's $177 million settlement is December 18. Here's how to get your payout - before it's too late."
+    },
+    {
+        "id": "https://github.com/GoogleChromeLabs/squoosh",
+        "title": "Make images smaller using best-in-class codecs, right in the browser",
+        "link": "https://github.com/GoogleChromeLabs/squoosh",
+        "published": "Sat, 06 Dec 2025 14:52:37 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46173762\">Comments</a>"
     }
 ]
