📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -14494,5 +14494,133 @@
         "published": "Sat, 06 Dec 2025 14:52:37 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46173762\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/15/merriam-webster-names-slop-the-word-of-the-year/",
+        "title": "Merriam-Webster names \u2018slop\u2019 the word of the year",
+        "link": "https://techcrunch.com/2025/12/15/merriam-webster-names-slop-the-word-of-the-year/",
+        "published": "Mon, 15 Dec 2025 19:47:53 +0000",
+        "source": "TechCrunch",
+        "summary": "AI-generated content has dominated the internet over the past year, and America's dictionary took note."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/15/googles-dark-web-report-feature-will-no-longer-be-available-starting-in-february/",
+        "title": "Google\u2019s \u2018dark web report\u2019 feature will no longer be available starting in February",
+        "link": "https://techcrunch.com/2025/12/15/googles-dark-web-report-feature-will-no-longer-be-available-starting-in-february/",
+        "published": "Mon, 15 Dec 2025 19:19:18 +0000",
+        "source": "TechCrunch",
+        "summary": "Google has revealed that its \u201cdark web report\u201d feature will be discontinued starting February 16, 2026. Launched initially about a year and a half ago, this tool aimed to help users monitor their personal information on the dark web For some users, the dark web report seemed like a valuable tool, scanning various data breach [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/844804/trump-tech-force-usds-apple-google-microsoft",
+        "title": "Trump is recruiting Big Tech workers for the government",
+        "link": "https://www.theverge.com/news/844804/trump-tech-force-usds-apple-google-microsoft",
+        "published": "2025-12-15T14:18:48-05:00",
+        "source": "The Verge",
+        "summary": "President Donald Trump will recruit workers from Amazon, Apple, Google, Meta, Microsoft, and other tech giants to form the US Tech Force, a new program that aims to \"modernize the federal government,\" according to an announcement on Monday. Under the new program, Trump plans to hire around 1,000 technology specialists to work across federal agencies [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/gadgets/2025/12/google-is-shutting-down-dark-web-reports-in-january-because-they-werent-helpful/",
+        "title": "Google will end dark web reports that alerted users to leaked data",
+        "link": "https://arstechnica.com/gadgets/2025/12/google-is-shutting-down-dark-web-reports-in-january-because-they-werent-helpful/",
+        "published": "Mon, 15 Dec 2025 18:13:24 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Google says the reports lacked \"helpful next steps.\""
+    },
+    {
+        "id": "https://www.engadget.com/gaming/playstation/bungies-marathon-will-arrive-on-ps5-and-pc-in-march-200838462.html?src=rss",
+        "title": "Bungie's Marathon will arrive on PS5 and PC in March",
+        "link": "https://www.engadget.com/gaming/playstation/bungies-marathon-will-arrive-on-ps5-and-pc-in-march-200838462.html?src=rss",
+        "published": "Mon, 15 Dec 2025 20:08:38 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<div id=\"0985088a39184e8684c6ce75fee3fa74\"><div style=\"width: 100%; height: 0; padding-bottom: 56.25%;\"></div></div>\n<p>Bungie\u2019s <em>Marathon</em> has a new release window. The survival extraction shooter was originally set to hit PlayStation 5 and PC <a href=\"https://www.engadget.com/gaming/bungie-shares-first-looks-at-gameplay-from-its-new-shooter-marathon-alongside-a-release-date-213530509.html\">in September</a>, but by June, Sony had <a href=\"https://www.engadget.com/gaming/bungie-delays-mar"
+    },
+    {
+        "id": "https://gizmodo.com/investors-are-using-the-same-tool-as-the-big-short-guys-to-hedge-against-an-ai-bubble-2000699860",
+        "title": "Investors are Using the Same Tool as \u2018The Big Short\u2019 Guys to Hedge Against an AI Bubble",
+        "link": "https://gizmodo.com/investors-are-using-the-same-tool-as-the-big-short-guys-to-hedge-against-an-ai-bubble-2000699860",
+        "published": "Mon, 15 Dec 2025 20:00:58 +0000",
+        "source": "Gizmodo",
+        "summary": "That's a good sign, right?"
+    },
+    {
+        "id": "https://gizmodo.com/christianity-may-have-brought-face-tattoos-to-medieval-nubia-2000699441",
+        "title": "Christianity May Have Brought Face Tattoos to Medieval Nubia",
+        "link": "https://gizmodo.com/christianity-may-have-brought-face-tattoos-to-medieval-nubia-2000699441",
+        "published": "Mon, 15 Dec 2025 20:00:52 +0000",
+        "source": "Gizmodo",
+        "summary": "Researchers traced tattoos across hundreds of human remains from northeastern Africa."
+    },
+    {
+        "id": "https://gizmodo.com/it-welcome-to-derry-star-taylour-paige-wasnt-happy-with-her-characters-big-choice-2000699800",
+        "title": "\u2018It: Welcome to Derry\u2019 Star Taylour Paige Wasn\u2019t Happy With Her Character\u2019s Big Choice",
+        "link": "https://gizmodo.com/it-welcome-to-derry-star-taylour-paige-wasnt-happy-with-her-characters-big-choice-2000699800",
+        "published": "Mon, 15 Dec 2025 19:45:31 +0000",
+        "source": "Gizmodo",
+        "summary": "The Stephen King adaptation wrapped up its first season on HBO last night with plenty of mayhem and a few plot contortions."
+    },
+    {
+        "id": "https://www.zdnet.com/article/change-android-phone-settings-battery-life/",
+        "title": "I changed 12 settings on my Android phone to significantly extend its battery life",
+        "link": "https://www.zdnet.com/article/change-android-phone-settings-battery-life/",
+        "published": "Mon, 15 Dec 2025 20:07:00 GMT",
+        "source": "Latest news",
+        "summary": "Battery dropping too fast? Consult these 12 expert-approved tips to make your device last longer."
+    },
+    {
+        "id": "https://www.zdnet.com/article/stocking-stuffer-gift-guide/",
+        "title": "The 15+ best tech stocking stuffers perfect for holiday gifting (all under $75)",
+        "link": "https://www.zdnet.com/article/stocking-stuffer-gift-guide/",
+        "published": "Mon, 15 Dec 2025 19:59:07 GMT",
+        "source": "Latest news",
+        "summary": "I test out nifty tech gadgets all year long. Here are my favorite products that make perfect stocking stuffers for the holiday season."
+    },
+    {
+        "id": "https://www.zdnet.com/article/sea-to-summit-dry-iphone-bag-review/",
+        "title": "This surprise iPhone travel accessory has become a mainstay in my kit - and it's priced well",
+        "link": "https://www.zdnet.com/article/sea-to-summit-dry-iphone-bag-review/",
+        "published": "Mon, 15 Dec 2025 19:55:00 GMT",
+        "source": "Latest news",
+        "summary": "Sea to Summit's View Dry Bag is a lightweight, go-anywhere safeguard for your gadgets. Here's how it works."
+    },
+    {
+        "id": "https://www.zdnet.com/article/ai-2026-business-predictions/",
+        "title": "AI might finally deliver real ROI for businesses in 2026 - and experts say this is why",
+        "link": "https://www.zdnet.com/article/ai-2026-business-predictions/",
+        "published": "Mon, 15 Dec 2025 19:17:00 GMT",
+        "source": "Latest news",
+        "summary": "If you've been waiting for AI promises to materialize, 2026 may be your year - and this unexpected element could be why."
+    },
+    {
+        "id": "https://ericdaigle.ca/posts/super-secure-maga-messaging-app-leaks-everyones-phone-number/",
+        "title": "\u201cSuper secure\u201d MAGA-themed messaging app leaks everyone's phone number",
+        "link": "https://ericdaigle.ca/posts/super-secure-maga-messaging-app-leaks-everyones-phone-number/",
+        "published": "Mon, 15 Dec 2025 19:23:51 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46279123\">Comments</a>"
+    },
+    {
+        "id": "https://liveandletsfly.com/united-airlines-777-200-future/",
+        "title": "United 777-200 fleet faces an uncertain future after Dulles engine failure",
+        "link": "https://liveandletsfly.com/united-airlines-777-200-future/",
+        "published": "Mon, 15 Dec 2025 19:19:23 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46279053\">Comments</a>"
+    },
+    {
+        "id": "https://blog.vaxry.net/articles/2025-dbusSucks",
+        "title": "D-Bus is a disgrace to the Linux desktop",
+        "link": "https://blog.vaxry.net/articles/2025-dbusSucks",
+        "published": "Mon, 15 Dec 2025 19:07:10 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46278857\">Comments</a>"
+    },
+    {
+        "id": "https://umbrel.com",
+        "title": "Umbrel \u2013 Personal Cloud",
+        "link": "https://umbrel.com",
+        "published": "Mon, 15 Dec 2025 19:27:08 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46279187\">Comments</a>"
     }
 ]
