📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -14622,5 +14622,173 @@
         "published": "Mon, 15 Dec 2025 19:27:08 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46279187\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/15/fords-next-f-150-lightning-will-have-a-gas-generator-as-it-pivots-away-from-large-evs/",
+        "title": "Ford\u2019s next F-150 Lightning will have a gas generator as it\u00a0pivots away from large EVs",
+        "link": "https://techcrunch.com/2025/12/15/fords-next-f-150-lightning-will-have-a-gas-generator-as-it-pivots-away-from-large-evs/",
+        "published": "Mon, 15 Dec 2025 21:05:03 +0000",
+        "source": "TechCrunch",
+        "summary": "The company is abandoning plans for a brand new all-electric pickup truck codenamed \"T3\" and ending production of the battery-only Lightning."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/15/creative-commons-announces-tentative-support-for-ai-pay-to-crawl-systems/",
+        "title": "Creative Commons announces tentative support for AI \u2018pay-to-crawl\u2019 systems",
+        "link": "https://techcrunch.com/2025/12/15/creative-commons-announces-tentative-support-for-ai-pay-to-crawl-systems/",
+        "published": "Mon, 15 Dec 2025 20:54:54 +0000",
+        "source": "TechCrunch",
+        "summary": "The organization offered support for this idea of an AI marketplace, and  suggested several guiding principles."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/15/lightspeed-raises-record-9b-in-fresh-capital/",
+        "title": "Lightspeed raises record $9B in fresh capital",
+        "link": "https://techcrunch.com/2025/12/15/lightspeed-raises-record-9b-in-fresh-capital/",
+        "published": "Mon, 15 Dec 2025 20:32:33 +0000",
+        "source": "TechCrunch",
+        "summary": "The massive fund haul will allow the Silicon Valley firm to continue to invest in cash hungry AI startups."
+    },
+    {
+        "id": "https://www.theverge.com/news/844813/ford-hybrid-erev-f150-energy-storage-jobs",
+        "title": "Ford\u2019s big bet on EVs didn\u2019t pan out \u2014 now it\u2019s pivoting to hybrids and energy storage",
+        "link": "https://www.theverge.com/news/844813/ford-hybrid-erev-f150-energy-storage-jobs",
+        "published": "2025-12-15T16:05:00-05:00",
+        "source": "The Verge",
+        "summary": "Ford announced a series of changes to its gas- and electric-powered vehicle business aimed at dramatically increasing hybrid vehicle production in the face of slowing EV sales. The automaker also introducing some new products as part of this plan, including an extended-range EV version of its F-series truck and battery storage systems to meet growing [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/844698/sony-ps5-playstation-portal-dualsense-controller-deal-sale-2025",
+        "title": "The PS5, PlayStation Portal, and Sony\u2019s DualSense are still on sale for a limited time",
+        "link": "https://www.theverge.com/gadgets/844698/sony-ps5-playstation-portal-dualsense-controller-deal-sale-2025",
+        "published": "2025-12-15T15:30:00-05:00",
+        "source": "The Verge",
+        "summary": "Sony\u2019s annual PlayStation sale has been going on for nearly a month now, offering discounts on everything from the PlayStation 5 Digital Edition and PlayStation Portal to Sony\u2019s standard DualSense controller. However, the end of the sale is quickly approaching, with Sony\u2019s website showing that some deals are set to expire as soon as Friday, [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/gaming/2025/12/microsoft-takes-down-mod-that-recreated-halo-3-in-counter-strike-2/",
+        "title": "Microsoft takes down mod that recreated Halo 3 in Counter-Strike 2",
+        "link": "https://arstechnica.com/gaming/2025/12/microsoft-takes-down-mod-that-recreated-halo-3-in-counter-strike-2/",
+        "published": "Mon, 15 Dec 2025 20:20:05 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Project Misriah creator vows to use new experience \"to cook up something else.\""
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2025/12/openai-refuses-to-say-where-chatgpt-logs-go-when-users-die/",
+        "title": "Murder-suicide case shows OpenAI selectively hides data after users die",
+        "link": "https://arstechnica.com/tech-policy/2025/12/openai-refuses-to-say-where-chatgpt-logs-go-when-users-die/",
+        "published": "Mon, 15 Dec 2025 20:10:25 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "OpenAI accused of hiding full ChatGPT logs in murder-suicide case."
+    },
+    {
+        "id": "https://arstechnica.com/culture/2025/12/r-i-p-rob-reiner-beloved-filmmaker-dead-at-78/",
+        "title": "Filmmaker Rob Reiner, wife, killed in horrific home attack",
+        "link": "https://arstechnica.com/culture/2025/12/r-i-p-rob-reiner-beloved-filmmaker-dead-at-78/",
+        "published": "Mon, 15 Dec 2025 19:53:04 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "The Reiners' troubled 32-year-old son, Nick, has been arrested in conjunction with the killings."
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2025/12/uk-to-encourage-apple-and-google-to-put-nudity-blocking-systems-on-phones/",
+        "title": "UK to \u201cencourage\u201d Apple and Google to put nudity-blocking systems on phones",
+        "link": "https://arstechnica.com/tech-policy/2025/12/uk-to-encourage-apple-and-google-to-put-nudity-blocking-systems-on-phones/",
+        "published": "Mon, 15 Dec 2025 19:38:32 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Government seeks \"nudity-detection algorithms\" in iOS and Android, report says."
+    },
+    {
+        "id": "https://www.engadget.com/the-best-christmas-gift-ideas-everyone-on-your-2025-holiday-shopping-list-will-love-170018978.html?src=rss",
+        "title": "The best Christmas gift ideas everyone on your 2025 holiday shopping list will love",
+        "link": "https://www.engadget.com/the-best-christmas-gift-ideas-everyone-on-your-2025-holiday-shopping-list-will-love-170018978.html?src=rss",
+        "published": "Mon, 15 Dec 2025 21:01:40 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>This time of year has a lot of merry and bright things to be excited about, but it can be stressful if you\u2019re stumped on what to get your mom, dad, best friend, coworker or kids\u2019 teacher as a holiday gift. Whether you enjoy or dread buying gifts for people, it\u2019s safe to say we all want to give our loved ones things they will enjoy and appreciate. But there\u2019s a lot of noise, junk and bad deals disguised as good deals to sift through as we get closer and closer to the holidays.<br /><br />Allow"
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/streaming/apple-tv-app-for-android-now-supports-google-cast-205642324.html?src=rss",
+        "title": "Apple TV app for Android now supports Google Cast",
+        "link": "https://www.engadget.com/entertainment/streaming/apple-tv-app-for-android-now-supports-google-cast-205642324.html?src=rss",
+        "published": "Mon, 15 Dec 2025 20:56:42 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Apple TV is adding Google Cast support to its native Android app. This update allows subscribers to stream Apple TV shows from their smartphones to their televisions. Apple's streaming service only just <a href=\"https://www.engadget.com/entertainment/streaming/an-apple-tv-app-is-finally-available-for-android-devices-200044050.html\"><ins>released</ins></a> the dedicated app for the Android operating system in February 2025. Adding in Google Cast support helps fully integrate the app into the e"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/playstation/fallout-season-2s-first-episode-will-premiere-a-little-earlier-than-expected-205018028.html?src=rss",
+        "title": "Fallout season 2's first episode will premiere a little earlier than expected",
+        "link": "https://www.engadget.com/gaming/playstation/fallout-season-2s-first-episode-will-premiere-a-little-earlier-than-expected-205018028.html?src=rss",
+        "published": "Mon, 15 Dec 2025 20:50:18 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>In an era where we often have to twiddle our thumbs for three years before a new season of a TV show we enjoy returns to our screens, the <a href=\"https://www.engadget.com/entertainment/tv-movies/fallout-season-two-has-a-teaser-trailer-and-a-december-17-release-date-211307692.html\">second season of <em>Fallout</em></a><em>&nbsp;</em>has had a relatively short turnaround. It's set to hit Prime Video 20 months after the first batch of episodes. As it turns out, the season two premiere is going "
+    },
+    {
+        "id": "https://www.engadget.com/gaming/playstation/bungies-marathon-will-arrive-in-march-200838426.html?src=rss",
+        "title": "Bungie's Marathon will arrive in March",
+        "link": "https://www.engadget.com/gaming/playstation/bungies-marathon-will-arrive-in-march-200838426.html?src=rss",
+        "published": "Mon, 15 Dec 2025 20:43:22 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<div id=\"0985088a39184e8684c6ce75fee3fa74\"></div>\n<p>Bungie\u2019s <em>Marathon</em> has a new release window. The survival extraction shooter was originally set to hit PlayStation 5, Xbox Series X/S and PC <a href=\"https://www.engadget.com/gaming/bungie-shares-first-looks-at-gameplay-from-its-new-shooter-marathon-alongside-a-release-date-213530509.html\">in September</a>, but by June, Sony had <a href=\"https://www.engadget.com/gaming/bungie-delays-marathon-indefinitely-190832450.html\">delayed it inde"
+    },
+    {
+        "id": "https://www.engadget.com/ar-vr/disney-is-now-available-to-stream-on-metas-quest-headsets-203622392.html?src=rss",
+        "title": "Disney+ is now available to stream on Meta's Quest headsets",
+        "link": "https://www.engadget.com/ar-vr/disney-is-now-available-to-stream-on-metas-quest-headsets-203622392.html?src=rss",
+        "published": "Mon, 15 Dec 2025 20:36:22 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Meta revealed that Disney+ was coming to its Quest headsets earlier this year during its Connect event. Now, the streaming app and its vast catalog are <a class=\"no-affiliate-link link\" href=\"https://www.meta.com/blog/disney-plus-meta-quest-launch/\" target=\"_blank\">finally available</a> to Meta's VR users in the United States.</p><p>Meta recently overhauled the Quest's entertainment experience with a new <a class=\"link\" href=\"https://www.engadget.com/entertainment/streaming/meta-horizon-tv-is"
+    },
+    {
+        "id": "https://gizmodo.com/plasma-turbulence-is-doing-strange-things-inside-fusion-reactors-2000699898",
+        "title": "Plasma Turbulence Is Doing Surprising Things Inside Fusion Reactors",
+        "link": "https://gizmodo.com/plasma-turbulence-is-doing-strange-things-inside-fusion-reactors-2000699898",
+        "published": "Mon, 15 Dec 2025 21:05:05 +0000",
+        "source": "Gizmodo",
+        "summary": "For plasma in fusion reactors, turbulence might be more than a pesky thing to control, a new study suggests."
+    },
+    {
+        "id": "https://gizmodo.com/illegal-downloads-of-one-battle-after-another-contain-dangerous-malware-2000699788",
+        "title": "Illegal Downloads of \u2018One Battle After Another\u2019 Contain Dangerous Malware",
+        "link": "https://gizmodo.com/illegal-downloads-of-one-battle-after-another-contain-dangerous-malware-2000699788",
+        "published": "Mon, 15 Dec 2025 20:30:15 +0000",
+        "source": "Gizmodo",
+        "summary": "The movie starts streaming at HBO Max on Dec. 19."
+    },
+    {
+        "id": "https://gizmodo.com/avengers-doomsday-trailer-leak-reveal-chris-evans-2000699881",
+        "title": "Marvel\u2019s Grand \u2018Avengers: Doomsday\u2019 Plans Have Started Hitting the Web",
+        "link": "https://gizmodo.com/avengers-doomsday-trailer-leak-reveal-chris-evans-2000699881",
+        "published": "Mon, 15 Dec 2025 20:20:22 +0000",
+        "source": "Gizmodo",
+        "summary": "A leaked teaser trailer seemingly reveals that another major Avenger is making their return."
+    },
+    {
+        "id": "https://readwrite.com/new-york-approves-three-casino-licenses-clearing-way-for-first-full-scale-nyc-casinos/",
+        "title": "New York Approves Three Casino Licenses, Clearing Way for First Full-Scale NYC Casinos",
+        "link": "https://readwrite.com/new-york-approves-three-casino-licenses-clearing-way-for-first-full-scale-nyc-casinos/",
+        "published": "Mon, 15 Dec 2025 20:12:38 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"The Manhattan, NYC skyline\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/New-York-Approves-Three-Casino-Licenses-Clearing-Way-for-First-Full-Scale-NYC-Casinos-300x200.jpg\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>All three casino projects slated for New York City won approval by the New York State Gaming Commission on Monday,&#8230; <a class=\"more-link\" href=\"https://"
+    },
+    {
+        "id": "https://www.zdnet.com/article/gallup-survey-ai-use-increase-communication-gap-workers-employers/",
+        "title": "More workers are using AI, but don't know if their employers are, too - why that's a problem",
+        "link": "https://www.zdnet.com/article/gallup-survey-ai-use-increase-communication-gap-workers-employers/",
+        "published": "Mon, 15 Dec 2025 20:28:36 GMT",
+        "source": "Latest news",
+        "summary": "New Gallup research reveals an AI communication gap between employers and employees - with key differences among industries."
+    },
+    {
+        "id": "https://www.zdnet.com/article/google-ai-publisher-impact/",
+        "title": "Google's search chief rejects this strategy for licensing news content amid AI scramble",
+        "link": "https://www.zdnet.com/article/google-ai-publisher-impact/",
+        "published": "Mon, 15 Dec 2025 20:26:59 GMT",
+        "source": "Latest news",
+        "summary": "Google's Nick Fox rejected a news API proposal, acknowledged publisher struggles, and explained what's delaying Personal Context."
+    },
+    {
+        "id": "https://community.letsencrypt.org/t/upcoming-changes-to-let-s-encrypt-certificates/243873",
+        "title": "Upcoming Changes to Let's Encrypt Certificates",
+        "link": "https://community.letsencrypt.org/t/upcoming-changes-to-let-s-encrypt-certificates/243873",
+        "published": "Mon, 15 Dec 2025 19:30:22 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46279241\">Comments</a>"
     }
 ]
